Add evaluation service to Docker Compose and include necessary files. Created Dockerfile, requirements.txt, and initial Jupyter notebook for evaluation. Added .gitignore to exclude unnecessary files.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,6 +89,17 @@ services:
       timeout: 10s
       retries: 3
 
+  evaluation:
+    build: ./evaluation
+    ports:
+      - "8888:8888"
+    volumes:
+      - ./evaluation:/app/evaluation
+    networks:
+      - plagiarism_network
+    depends_on:
+      - orchestrator
+
 volumes:
   shared:
     driver: local
